test/fails/bad_parsing/bad_tag2.lgl
void main() {
    tag evil is int;
}
